--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
                 
                 <p class="contact"><label for="username">Create a username</label></p> 
     			<input id="username" name="username" placeholder="username" required="" tabindex="2" type="text"> 
+
+    			<input type="checkbox" name="lenguaje" value="cobol">cobol<br>
+    			<input type="checkbox" name="lenguaje" value="C">C<br>
+				<input type="checkbox" name="lenguaje" value="Java">Java<br>
     			 
                 <p class="contact"><label for="password">Create a password</label></p> 
     			<input type="password" id="password" name="password" required=""> 
